# voice-scraper

./: .env.local  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
voice_scraper/: cli.py  console.py  downloader.py  embedding.py  models.py  search.py  segmentation.py  speaker_identifier.py  utils.py
